@@ -15,5 +15,6 @@ Depends: R (>= 2.12.0), methods, stats4
 Imports: gsl, ADGofTest, stabledist
 Suggests: lattice, MASS, sfsmisc, Rmpfr, bbmle
 License: GPL (>= 2)
+URL: http://nacopula.r-forge.r-project.org/
 LazyData: yes
 Encoding: UTF-8
